# RAG_Platform

./: .gitignore  API_SPEC.md  ARCHITECTURE.md  ERD.md  FUNCTIONAL_SPEC.md  PRD.md  README.md  TECH_STACK.md  app.js  index.html  styles.css
backend/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/src/foundry/: __init__.py  cli.py  main.py
backend/src/foundry/api/: dependencies.py
backend/src/foundry/api/v1/: __init__.py  router.py
backend/src/foundry/api/v1/endpoints/: __init__.py  cag.py  chat.py  conversations.py  deployments.py  evaluation.py  health.py  pipelines.py  providers.py  public.py  rag.py  sources.py
backend/src/foundry/core/: __init__.py  config.py  container.py  crypto.py  database.py  errors.py
backend/src/foundry/models/: __init__.py  base.py  chat.py  deployment.py  pipeline.py  provider_connection.py  source.py
backend/src/foundry/schemas/: __init__.py  base.py  cag.py  chat.py  conversation.py  deployment.py  error.py  evaluation.py  pipeline.py  provider.py  source.py  system.py
backend/src/foundry/services/: bge_reranker.py  conversations.py  duckduckgo_search.py  knowledge.py  langgraph_workflow.py  local_model.py  orchestrator.py  pipelines.py  provider_quota.py  providers.py  query_rewriter.py  rag_router.py  ragas_evaluation.py  retrieval_tools.py  sources.py  tables.py  web_search.py
backend/tests/: conftest.py  test_api.py  test_cag_eval.py  test_local_bootstrap.py  test_tables.py
docs/: API_SPEC.md  ARCHITECTURE.md  FUNCTIONAL_SPEC.md  PRD.md  RAG_RAGAS_GUIDE.md  REQUIREMENTS_SPEC.md  (+2 more)
(+28 files in other folders)
