[project]
name = "foundry-backend"
version = "0.1.0"
description = "LangChain RAG/TAG/CAG platform PoC backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "cryptography>=44",
  "duckdb>=1.4,<2",
  "fastapi>=0.135,<1",
  "httpx>=0.28,<1",
  "langchain>=1.2,<2",
  "langchain-anthropic>=1.3,<2",
  "langchain-core>=1.2,<2",
  "langchain-huggingface>=1.1,<2",
  "langchain-ollama>=1.1,<2",
  "langchain-openai>=1.1,<2",
  "langchain-postgres>=0.0.16,<1",
  "langchain-text-splitters>=1.1,<2",
  "numpy>=2.2,<3",
  "openpyxl>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "pypdf>=6,<7",
  "python-multipart>=0.0.20,<1",
  "redis>=6,<8",
  "sentence-transformers>=5,<6",
  "sqlalchemy[asyncio]>=2.0.40,<3",
  "sqlglot>=27,<30",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
foundry-local = "foundry.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.coverage.run]
source = ["foundry"]
